--- a/index.html
+++ b/index.html
@@ -21,9 +21,65 @@
 
 <body>
 
+    <!-- HEADER -->
 
-    <h1>CIAOOOOO</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex error, accusamus velit tempore perferendis sequi fuga. Exercitationem perferendis itaque expedita, voluptate, nemo corrupti tempora reiciendis cum maxime architecto voluptatibus voluptates.</p>
+    <header class="container-fluid">
+        <div class="row header-custom align-items-center">
+            <div class="col-12 text-center">
+                <h1 class="display-1">LOREM IPTUM</h1>
+            </div>
+        </div>
+
+    </header>
+
+    <!-- NAVBAR -->
+
+    <nav class="navbar navbar-expand-lg bg-bl sticky-top">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">
+        <img src="./Media/logo-w.png" alt="logo del sito" class="img-fluid logo">
+    </a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link" aria-current="page" href="#">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Link</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Dropdown
+          </a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="#">Action</a></li>
+            <li><a class="dropdown-item" href="#">Another action</a></li>
+            <li><hr class="dropdown-divider"></li>
+            <li><a class="dropdown-item" href="#">Something else here</a></li>
+          </ul>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+        </li>
+      </ul>
+      <form class="d-flex" role="search">
+        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"/>
+        <button class="btn btn-outline-success" type="submit">Search</button>
+      </form>
+    </div>
+  </div>
+</nav>
+
+
+
+
+
+<div style="height: 4000px;"></div>
+
+
 
 
 
